--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,4 +29,4 @@ repos:
           - flake8-pytest-style==1.3.0
           - flake8-return==1.1.2
         args:
-          - "--ignore=S101,W503,E203,E501,E800,CCR001,PT012,T001"
+          - "--ignore=S101,W503,E203,E501,E800,CCR001,PT012,T001,F811"
