--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-pre-commit
-pytest
-black
-geopy
-requests
-pandas
+pre-commit~==2.9.3
+pytest~==6.1.2
+black~==20.8b1
+geopy~=2.1.0
+requests~=2.25.1
+pandas~=1.2.1
+matplotlib~=3.3.3
+python-dateutil~=2.8.1
